--- a/Reinforcement_Learning_4_Deep_Q_Network_(in_jpn).ipynb
+++ b/Reinforcement_Learning_4_Deep_Q_Network_(in_jpn).ipynb
@@ -77,13 +77,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "WIP"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### V Mnih. et al.(2013)における手法"
    ]
   },
@@ -117,9 +110,9 @@
    "source": [
     "Bellman最適方程式より\n",
     "\n",
-    "\\begin{align}\n",
-    "Q^{*}(s,a) = \\mathbb{E}_{s'~\\varepsilon}\\left[ r+\\gamma \\max_{a'}Q^{*}(s',a')\\,|\\,s,a\\right]\n",
-    "\\end{align}\n",
+    "\\begin{align*}\n",
+    "Q^{*}(s,a) = \\mathbb{E}_{s'~\\varepsilon}\\left[ r+\\gamma \\max_{a'}Q^{*}(s',a')\\,|\\,s,a\\right] \\tag{1}\n",
+    "\\end{align*}\n",
     "\n",
     "古典的手法では行動価値関数は個別のシーケンスに対してそれぞれ推定されるため、一般化されず実用的でなかった。  \n",
     "これを解決するために、近似器を用いて行動価値関数を推定する手法がよく用いられる。  \n",
@@ -131,35 +124,35 @@
     "V Mnih(2013)の手法では、それまで典型的だった線形近似器ではなく、非線形近似器であるニューラルネットワークを用いる。  \n",
     "重みを $\\theta$ として、誤差関数 $L_{i}(\\theta_{i})$ は  \n",
     "\n",
-    "\\begin{align}\n",
-    "L_{i}(\\theta_{i}) = \\mathbb{E}_{s,a~\\rho(\\cdot)}\\left[ (y_{i} - Q(s,a;\\theta_{i}))^{2} \\right]\n",
-    "\\end{align}\n",
+    "\\begin{align*}\n",
+    "L_{i}(\\theta_{i}) = \\mathbb{E}_{s,a~\\rho(\\cdot)}\\left[ (y_{i} - Q(s,a;\\theta_{i}))^{2} \\right] \\tag{2}\n",
+    "\\end{align*}\n",
     "\n",
     "ここで $y_{i}$ はターゲット、$\\rho(s,a)$ は確率分布（behaviour distributionと呼ぶ）である。  \n",
     "$L_{i}(\\theta_{i})$ の更新時には重み $\\theta_{i-1}が用いられる。  \n",
     "誤差関数の微分は次のようになる。  \n",
     "\n",
-    "\\begin{align}\n",
-    "\\nabla_{\\theta_{i}}L_{i}(\\theta_{i}) = \\mathbb{E}_{s,a~\\rho(\\cdot);s'~\\varepsilon}\\left[ \\left(r+\\gamma\\max_{a'}Q(s',a';\\theta_{i-1}) - Q(s,a;\\theta_{i})\\right) \\nabla_{\\theta_{i}}Q(s,a;\\theta_{i}) \\right]\n",
-    "\\end{align}"
+    "\\begin{align*}\n",
+    "\\nabla_{\\theta_{i}}L_{i}(\\theta_{i}) = \\mathbb{E}_{s,a~\\rho(\\cdot);s'~\\varepsilon}\\left[ \\left(r+\\gamma\\max_{a'}Q(s',a';\\theta_{i-1}) - Q(s,a;\\theta_{i})\\right) \\nabla_{\\theta_{i}}Q(s,a;\\theta_{i}) \\right] \\tag{3}\n",
+    "\\end{align*}"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Algorithm : Deep Q-learning with Experience Replay\n",
+    "**Algorithm** : Deep Q-learning with Experience Replay\n",
     ">Initialize replay memory *D* to capacity *N*  \n",
     ">Initialize action-value function *Q* with random weights  \n",
-    ">**for** episode = 1,*M* **do**    \n",
-    ">　　Initialise sequence $s_{1} = {x_{1}}$ and preprocessed sequenced $\\phi_{1} = \\phi(s_{1})$  \n",
-    ">　　**for** *t* = 1, *T* **do**  \n",
-    ">　　　　With probability $\\epsilon$ select a random action $a_{t}$  \n",
-    ">　　　　otherwise select $a_{t} = \\max_{a}Q^{*}(\\phi(s_{t},a;\\theta)$  \n",
-    ">　　　　Execute action $a_{t}$ in emulator and observe reward $r_{t}$ and image $x{t+1}$  \n",
-    ">　　　　Set $s_{t+1} = s_{t}, a_{t}, x_{t+1}$ and preprocess $\\phi_{t+1} = \\phi(s_{t+1})$  \n",
-    ">　　　　Store transition ($\\phi_{t},a_{t},r_{t},\\phi_{t+1}$) in *D*  \n",
-    ">　　　　Sample random minibatch of transitions ($\\phi_{j},a_{j},r_{j},\\phi_{j+1}$) from *D*  \n",
+    ">**for** episode = 1,*M* **do**  \n",
+    ">　　Initialise sequence $s_{1} = {x_{1}}$ and preprocessed sequenced $\\phi_{1} = \\phi(s_{1})$　  \n",
+    ">　　**for** *t* = 1, *T* **do**　  \n",
+    ">　　　　With probability $\\epsilon$ select a random action $a_{t}$　  \n",
+    ">　　　　otherwise select $a_{t} = \\max_{a}Q^{*}(\\phi(s_{t},a;\\theta)$　  \n",
+    ">　　　　Execute action $a_{t}$ in emulator and observe reward $r_{t}$ and image $x{t+1}$　  \n",
+    ">　　　　Set $s_{t+1} = s_{t}, a_{t}, x_{t+1}$ and preprocess $\\phi_{t+1} = \\phi(s_{t+1})$　  \n",
+    ">　　　　Store transition ($\\phi_{t},a_{t},r_{t},\\phi_{t+1}$) in *D*　  \n",
+    ">　　　　Sample random minibatch of transitions ($\\phi_{j},a_{j},r_{j},\\phi_{j+1}$) from *D*　  \n",
     ">$$Set\\ y_{j} =\\begin{cases}\n",
     "r_{j} & \\textrm{for terminal}\\ \\phi_{j+1}\\\\\n",
     "r_{j} + \\gamma \\max_{a'}Q(\\phi_{j+1}, a'; \\theta) & \\textrm{for non-terminal}\\ \\phi_{j+1}\n",
@@ -168,6 +161,13 @@
     ">　　　　Perform a gradient descent step on $(y_{i} - Q(\\phi_{j},a_{j};\\theta))^{2}$ according to equation 3  \n",
     ">　　end for  \n",
     ">end for  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "WIP"
    ]
   }
  ],
