--- a/Reinforcement_Learning_4_Deep_Q_Network_(in_jpn).ipynb
+++ b/Reinforcement_Learning_4_Deep_Q_Network_(in_jpn).ipynb
@@ -149,53 +149,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n",
-    "\\begin{align}\n",
-    "Algorithm : Deep Q-learning with Experience Replay\n",
-    "Initialize replay memory D to capacity N  \n",
-    "Initialize action-value function Q with random weights  \n",
-    "for episode = 1,M do  \n",
-    "　　Initialise sequence s_{1} = {x_{1}} and preprocessed sequenced \\phi_{1} = \\phi(s_{1})　  \n",
-    "　　for t = 1, T do　  \n",
-    "　　　　With probability \\epsilon select a random action a_{t}　  \n",
-    "　　　　otherwise select a_{t} = \\max_{a}Q^{*}(\\phi(s_{t},a;\\theta)　  \n",
-    "　　　　Execute action a_{t} in emulator and observe reward r_{t} and image x{t+1}　  \n",
-    "　　　　Set s_{t+1} = s_{t}, a_{t}, x_{t+1} and preprocess \\phi_{t+1} = \\phi(s_{t+1})　  \n",
-    "　　　　Store transition (\\phi_{t},a_{t},r_{t},\\phi_{t+1}) in D　  \n",
-    "　　　　Sample random minibatch of transitions (\\phi_{j},a_{j},r_{j},\\phi_{j+1}) from D　  \n",
-    "Set\\ y_{j} =\\begin{cases}\n",
-    "r_{j} & \\textrm{for terminal}\\ \\phi_{j+1}\\\\\n",
-    "r_{j} + \\gamma \\max_{a'}Q(\\phi_{j+1}, a'; \\theta) & \\textrm{for non-terminal}\\ \\phi_{j+1}\n",
-    "\\end{cases}\n",
-    "　　　　Perform a gradient descent step on (y_{i} - Q(\\phi_{j},a_{j};\\theta))^{2} according to equation 3  \n",
-    "　　end for  \n",
-    "end for  \n",
-    "\\end{align}"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "**Algorithm** : Deep Q-learning with Experience Replay\n",
+    "\n",
     ">Initialize replay memory *D* to capacity *N*  \n",
     ">Initialize action-value function *Q* with random weights  \n",
     ">**for** episode = 1,*M* **do**  \n",
-    ">　　Initialise sequence $s_{1} = {x_{1}}$ and preprocessed sequenced $\\phi_{1} = \\phi(s_{1})$　  \n",
-    ">　　**for** *t* = 1, *T* **do**　  \n",
-    ">　　　　With probability $\\epsilon$ select a random action $a_{t}$　  \n",
-    ">　　　　otherwise select $a_{t} = \\max_{a}Q^{*}(\\phi(s_{t},a;\\theta)$　  \n",
-    ">　　　　Execute action $a_{t}$ in emulator and observe reward $r_{t}$ and image $x{t+1}$　  \n",
-    ">　　　　Set $s_{t+1} = s_{t}, a_{t}, x_{t+1}$ and preprocess $\\phi_{t+1} = \\phi(s_{t+1})$　  \n",
-    ">　　　　Store transition ($\\phi_{t},a_{t},r_{t},\\phi_{t+1}$) in *D*　  \n",
-    ">　　　　Sample random minibatch of transitions ($\\phi_{j},a_{j},r_{j},\\phi_{j+1}$) from *D*　  \n",
+    ">&nbsp;&nbsp;&nbsp;&nbsp;Initialise sequence $s_{1} = {x_{1}}$ and preprocessed sequenced $\\phi_{1} = \\phi(s_{1})$\n",
+    ">&nbsp;&nbsp;&nbsp;&nbsp;**for** *t* = 1, *T* **do**  \n",
+    ">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;With probability $\\epsilon$ select a random action $a_{t}$　  \n",
+    ">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;otherwise select $a_{t} = \\max_{a}Q^{*}(\\phi(s_{t},a;\\theta)$　  \n",
+    ">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Execute action $a_{t}$ in emulator and observe reward $r_{t}$ and image $x{t+1}$　  \n",
+    ">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Set $s_{t+1} = s_{t}, a_{t}, x_{t+1}$ and preprocess $\\phi_{t+1} = \\phi(s_{t+1})$　  \n",
+    ">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Store transition ($\\phi_{t},a_{t},r_{t},\\phi_{t+1}$) in *D*　  \n",
+    ">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Sample random minibatch of transitions ($\\phi_{j},a_{j},r_{j},\\phi_{j+1}$) from *D*　  \n",
     ">$$Set\\ y_{j} =\\begin{cases}\n",
     "r_{j} & \\textrm{for terminal}\\ \\phi_{j+1}\\\\\n",
     "r_{j} + \\gamma \\max_{a'}Q(\\phi_{j+1}, a'; \\theta) & \\textrm{for non-terminal}\\ \\phi_{j+1}\n",
     "\\end{cases}\n",
     "$$\n",
-    ">　　　　Perform a gradient descent step on $(y_{i} - Q(\\phi_{j},a_{j};\\theta))^{2}$ according to equation 3  \n",
-    ">　　end for  \n",
+    ">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Perform a gradient descent step on $(y_{i} - Q(\\phi_{j},a_{j};\\theta))^{2}$ according to equation 3  \n",
+    ">&nbsp;&nbsp;&nbsp;&nbsp;end for  \n",
     ">end for  "
    ]
   },
