Integrate 3 gate models

--- a/Syoukai_DeepLearning_1.ipynb
+++ b/Syoukai_DeepLearning_1.ipynb
@@ -1023,7 +1023,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1205,6 +1207,339 @@
     "df.columns = [\"k\", \"x\", \"t\", \"w\", \"theta\", \"y\", \"t-y\", \"dw\", \"dtheta\"]\n",
     "df"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "update finished. iter_count=16\n",
+      "w, theta = [1 1], 1\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>k</th>\n",
+       "      <th>x</th>\n",
+       "      <th>t</th>\n",
+       "      <th>w</th>\n",
+       "      <th>theta</th>\n",
+       "      <th>y</th>\n",
+       "      <th>t-y</th>\n",
+       "      <th>dw</th>\n",
+       "      <th>dtheta</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>[0, 0]</td>\n",
+       "      <td>0</td>\n",
+       "      <td>[0, 0]</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>[0, 0]</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>[0, 1]</td>\n",
+       "      <td>1</td>\n",
+       "      <td>[0, 0]</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>[0, 1]</td>\n",
+       "      <td>-1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>[1, 0]</td>\n",
+       "      <td>1</td>\n",
+       "      <td>[0, 1]</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>[0, 0]</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>[1, 1]</td>\n",
+       "      <td>1</td>\n",
+       "      <td>[0, 1]</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>[0, 0]</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>[0, 0]</td>\n",
+       "      <td>0</td>\n",
+       "      <td>[0, 1]</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>[0, 0]</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>6</td>\n",
+       "      <td>[0, 1]</td>\n",
+       "      <td>1</td>\n",
+       "      <td>[0, 1]</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>[0, 0]</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>7</td>\n",
+       "      <td>[1, 0]</td>\n",
+       "      <td>1</td>\n",
+       "      <td>[0, 1]</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>[1, 0]</td>\n",
+       "      <td>-1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>8</td>\n",
+       "      <td>[1, 1]</td>\n",
+       "      <td>1</td>\n",
+       "      <td>[1, 1]</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>[0, 0]</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>9</td>\n",
+       "      <td>[0, 0]</td>\n",
+       "      <td>0</td>\n",
+       "      <td>[1, 1]</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>[0, 0]</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>10</td>\n",
+       "      <td>[0, 1]</td>\n",
+       "      <td>1</td>\n",
+       "      <td>[1, 1]</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>[0, 0]</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>11</td>\n",
+       "      <td>[1, 0]</td>\n",
+       "      <td>1</td>\n",
+       "      <td>[1, 1]</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>[0, 0]</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>12</td>\n",
+       "      <td>[1, 1]</td>\n",
+       "      <td>1</td>\n",
+       "      <td>[1, 1]</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>[0, 0]</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>13</td>\n",
+       "      <td>[0, 0]</td>\n",
+       "      <td>0</td>\n",
+       "      <td>[1, 1]</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>[0, 0]</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>14</td>\n",
+       "      <td>[0, 1]</td>\n",
+       "      <td>1</td>\n",
+       "      <td>[1, 1]</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>[0, 0]</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>15</td>\n",
+       "      <td>[1, 0]</td>\n",
+       "      <td>1</td>\n",
+       "      <td>[1, 1]</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>[0, 0]</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>16</td>\n",
+       "      <td>[1, 1]</td>\n",
+       "      <td>1</td>\n",
+       "      <td>[1, 1]</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>[0, 0]</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     k       x  t       w theta  y  t-y      dw  dtheta\n",
+       "0    1  [0, 0]  0  [0, 0]     1  1   -1  [0, 0]       1\n",
+       "1    2  [0, 1]  1  [0, 0]     1  0    1  [0, 1]      -1\n",
+       "2    3  [1, 0]  1  [0, 1]     1  1    0  [0, 0]       0\n",
+       "3    4  [1, 1]  1  [0, 1]     1  1    0  [0, 0]       0\n",
+       "4    5  [0, 0]  0  [0, 1]     1  1   -1  [0, 0]       1\n",
+       "5    6  [0, 1]  1  [0, 1]     1  1    0  [0, 0]       0\n",
+       "6    7  [1, 0]  1  [0, 1]     1  0    1  [1, 0]      -1\n",
+       "7    8  [1, 1]  1  [1, 1]     1  1    0  [0, 0]       0\n",
+       "8    9  [0, 0]  0  [1, 1]     1  1   -1  [0, 0]       1\n",
+       "9   10  [0, 1]  1  [1, 1]     1  1    0  [0, 0]       0\n",
+       "10  11  [1, 0]  1  [1, 1]     1  1    0  [0, 0]       0\n",
+       "11  12  [1, 1]  1  [1, 1]     1  1    0  [0, 0]       0\n",
+       "12  13  [0, 0]  0  [1, 1]     1  0    0  [0, 0]       0\n",
+       "13  14  [0, 1]  1  [1, 1]     1  1    0  [0, 0]       0\n",
+       "14  15  [1, 0]  1  [1, 1]     1  1    0  [0, 0]       0\n",
+       "15  16  [1, 1]  1  [1, 1]     1  1    0  [0, 0]       0"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 一括対応ver\n",
+    "\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "\n",
+    "# 正解となる出力データ\n",
+    "def teacher_gate(x, teacher_data):\n",
+    "    return teacher_data[tuple(x)]\n",
+    "\n",
+    "# 使用するモデル\n",
+    "def gate_model(x,w,theta):\n",
+    "    return 1 if np.sum(np.multiply(x,w)) >= theta else 0\n",
+    "    \n",
+    "def update(dataset, w, theta, teacher_data, max_iter=100, y=gate_model, t=teacher_gate):\n",
+    "    record = []\n",
+    "    iter_count, val_dif = 0, 1\n",
+    "    while (iter_count < max_iter) and (val_dif != 0):\n",
+    "        val_dif = 0\n",
+    "        \n",
+    "        for x in dataset:\n",
+    "            x = np.array(x)\n",
+    "            t_val, y_val = t(x, teacher_data), y(x, w, theta)\n",
+    "            dw = (t_val - y_val) * x\n",
+    "            dtheta = -1 * (t_val - y_val)\n",
+    "            \n",
+    "            iter_count += 1\n",
+    "            val_dif = val_dif + abs(t_val - y_val)\n",
+    "            record.append([iter_count, x, t_val, w, theta, y_val, t_val-y_val, dw, dtheta])\n",
+    "            w = np.add(w,dw)\n",
+    "            theta += dtheta\n",
+    " \n",
+    "    print(\"update finished. iter_count={0}\".format(iter_count))\n",
+    "    print(\"w, theta = {}, {}\".format(w, theta))\n",
+    "    return record\n",
+    "\n",
+    "dataset = {\"two_input\" : [[0,0],[0,1],[1,0],[1,1]],\n",
+    "           \"one_input\" : [[0],[1]]\n",
+    "          }\n",
+    "teacher_data = {\"AND_gate\" : {(0,0):0, (0,1):0, (1,0):0, (1,1):1},\n",
+    "                \"OR_gate\" : {(0,0):0, (0,1):1, (1,0):1, (1,1):1},\n",
+    "                \"NOT_gate\" : {(0,):1, (1,):0}\n",
+    "               }\n",
+    "\n",
+    "# 初期値\n",
+    "w, theta = np.array([0,0]), np.array(0)\n",
+    "\n",
+    "record = update(dataset[\"two_input\"], w=w, theta=theta, \n",
+    "                teacher_data = teacher_data[\"OR_gate\"],\n",
+    "                max_iter=100)\n",
+    "df = pd.DataFrame(record)\n",
+    "df.columns = [\"k\", \"x\", \"t\", \"w\", \"theta\", \"y\", \"t-y\", \"dw\", \"dtheta\"]\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
