--- a/AizuOnlineJudge_1.ipynb
+++ b/AizuOnlineJudge_1.ipynb
@@ -527,7 +527,9 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -548,13 +550,683 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### ITP 1_4-B - Circle"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "12.566371 12.566371\n"
+     ]
+    }
+   ],
+   "source": [
+    "import math\n",
+    "\n",
+    "input_text = input()\n",
+    "r  =float(input_text)\n",
+    "area, circumference = math.pi * r**2, 2*math.pi*r\n",
+    "print(round(area,6), round(circumference,6))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### ITP 1_4-C - Simple Calculator"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import math\n",
+    "import sys\n",
+    "input_text = sys.stdin\n",
+    "#input_text = input()\n",
+    "\n",
+    "for t in input_text:\n",
+    "    a,op,b = t.split()\n",
+    "    a,b = float(a),float(b)\n",
+    "\n",
+    "    if op==\"+\":\n",
+    "        print(int(a+b))\n",
+    "    elif op==\"-\":\n",
+    "        print(int(a-b))\n",
+    "    elif op==\"*\":\n",
+    "        print(int(a*b))\n",
+    "    elif op==\"/\":\n",
+    "        print(int(math.floor(a/b)))\n",
+    "    elif op==\"?\" or b==\"?\":\n",
+    "        break\n",
+    "    else:\n",
+    "        break"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### ITP 1_4-D - Min, Max and Sum"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "import sys\n",
+    "input_text = sys.stdin\n",
+    "\n",
+    "for i,t in enumerate(input_text):\n",
+    "    if i==1:\n",
+    "        s = list(map(int, t.split()))\n",
+    "        print(min(s), max(s), sum(s))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### ITP 1_5-A - Print a Rectangle"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "input_text = sys.stdin\n",
+    "\n",
+    "for line in input_text:\n",
+    "    H,W = line.split()\n",
+    "    image = \"\"\n",
+    "    if H=='0' and W=='0': break\n",
+    "    for h in range(int(H)):\n",
+    "        for w in range(int(W)):\n",
+    "            image += \"#\"\n",
+    "        image += \"\\n\"\n",
+    "    print(image)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### ITP 1_5-B - Print a Frame"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "input_text = sys.stdin\n",
+    "\n",
+    "for line in input_text:\n",
+    "    H,W = line.split()\n",
+    "    if H=='0' and W=='0': break\n",
+    "        \n",
+    "    image = \"\"\n",
+    "    for h in range(int(H)):\n",
+    "        inner = \"#\" if (h==0 or h==int(H)-1) else \".\"\n",
+    "        image += \"#\" + inner*(int(W)-2) + \"#\\n\"\n",
+    "    print(image)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### ITP 1_5-C - Print a Chessboard"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "input_text = sys.stdin\n",
+    "\n",
+    "for line in input_text:\n",
+    "    H,W = line.split()\n",
+    "    if H=='0' and W=='0': break\n",
+    "        \n",
+    "    image = \"\"\n",
+    "    for h in range(int(H)):\n",
+    "        letter = \"#\" if h%2==0 else \".\"\n",
+    "        for w in range(int(W)):\n",
+    "            image += letter\n",
+    "            letter = \".\" if letter==\"#\" else \"#\"\n",
+    "        image += \"\\n\"\n",
+    "    print(image)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### ITP 1_5-D - Structured Programming"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "参考  \n",
+    "coutは、標準出力に対するマルチバイト出力ストリームオブジェクトである。  \n",
+    "std::cout << \"Hello world\" << std::endl;　は  \n",
+    "Hello world の出力を得る。  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100\n",
+      " 3 6 9 12 13 15 18 21 23 24 27 30 31 32 33 34 35 36 37 38 39 42 43 45 48 51 53 54 57 60 63 66 69 72 73 75 78 81 83 84 87 90 93 96 99\n"
+     ]
+    }
+   ],
+   "source": [
+    "input_text = input()\n",
+    "\n",
+    "n = int(input_text)\n",
+    "answer = \"\"\n",
+    "\n",
+    "for i in range(n):\n",
+    "    a,x=i+1, i+1\n",
+    "    \n",
+    "    if x%3==0 or x%10==3:\n",
+    "        answer += \" {}\".format(a)\n",
+    "    else:\n",
+    "        while x>=1:\n",
+    "            x = x//10\n",
+    "            if x%10==3:\n",
+    "                answer += \" {}\".format(a)\n",
+    "                break\n",
+    "print(answer)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### ITP 1_6-A - Reversing Numbers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'rs' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-8-c87547ca60ac>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      6\u001b[0m         \u001b[0ms\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmap\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mint\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m         \u001b[0mrs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmap\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstr\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0ms\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\" \"\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'rs' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "input_text = sys.stdin\n",
+    "\n",
+    "for i,t in enumerate(input_text):\n",
+    "    if i==1:\n",
+    "        s = list(map(int, t.split()))\n",
+    "        rs = map(str,s[::-1])\n",
+    "print(\" \".join(rs))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### ITP 1_6-B - Finding missing Cards"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "S 1\n",
+      "S 2\n",
+      "S 3\n",
+      "S 4\n",
+      "S 5\n",
+      "S 6\n",
+      "S 7\n",
+      "S 8\n",
+      "S 9\n",
+      "S 10\n",
+      "S 11\n",
+      "S 12\n",
+      "S 13\n",
+      "H 1\n",
+      "H 2\n",
+      "H 3\n",
+      "H 4\n",
+      "H 5\n",
+      "H 6\n",
+      "H 7\n",
+      "H 8\n",
+      "H 9\n",
+      "H 10\n",
+      "H 11\n",
+      "H 12\n",
+      "H 13\n",
+      "C 1\n",
+      "C 2\n",
+      "C 3\n",
+      "C 4\n",
+      "C 5\n",
+      "C 6\n",
+      "C 7\n",
+      "C 8\n",
+      "C 9\n",
+      "C 10\n",
+      "C 11\n",
+      "C 12\n",
+      "C 13\n",
+      "D 1\n",
+      "D 2\n",
+      "D 3\n",
+      "D 4\n",
+      "D 5\n",
+      "D 6\n",
+      "D 7\n",
+      "D 8\n",
+      "D 9\n",
+      "D 10\n",
+      "D 11\n",
+      "D 12\n",
+      "D 13\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sys, itertools\n",
+    "input_text = sys.stdin\n",
+    "\n",
+    "suit = ['S', 'H', 'C', 'D']\n",
+    "card_set = {}\n",
+    "for s,n in itertools.product(suit, range(13)):\n",
+    "    card_set[s,str(n+1)]=0\n",
+    "\n",
+    "for i,t in enumerate(input_text):\n",
+    "    if i!=0:\n",
+    "        s,n = t.split()\n",
+    "        card_set[s,n] += 1\n",
+    "        \n",
+    "for s in suit:\n",
+    "    for i in range(13):\n",
+    "        if card_set[s,str(i+1)]==0:\n",
+    "            print(s,i+1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### ITP 1_6-C - Official House"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " 0 0 0 0 0 0 0 0 0 0\n",
+      " 0 0 0 0 0 0 0 0 0 0\n",
+      " 0 0 0 0 0 0 0 0 0 0\n",
+      "####################\n",
+      " 0 0 0 0 0 0 0 0 0 0\n",
+      " 0 0 0 0 0 0 0 0 0 0\n",
+      " 0 0 0 0 0 0 0 0 0 0\n",
+      "####################\n",
+      " 0 0 0 0 0 0 0 0 0 0\n",
+      " 0 0 0 0 0 0 0 0 0 0\n",
+      " 0 0 0 0 0 0 0 0 0 0\n",
+      "####################\n",
+      " 0 0 0 0 0 0 0 0 0 0\n",
+      " 0 0 0 0 0 0 0 0 0 0\n",
+      " 0 0 0 0 0 0 0 0 0 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "input_text = sys.stdin\n",
+    "move_record={}\n",
+    "\n",
+    "for i,t in enumerate(input_text):\n",
+    "    if i!=0:\n",
+    "        b,f,r,v = list(map(int, t.split()))\n",
+    "        move_record[b,f,r] = move_record.get((b,f,r), 0) + v\n",
+    "\n",
+    "answer = \"\"\n",
+    "\n",
+    "for b in range(4):\n",
+    "    for f in range(3):\n",
+    "        line = \"\"\n",
+    "        for r in range(10):\n",
+    "            line += \" \" + str(move_record.get((b+1,f+1,r+1), 0))\n",
+    "        answer += line + \"\\n\"\n",
+    "    if b != range(4)[-1]:\n",
+    "        answer += \"#\"*20 + \"\\n\"\n",
+    "    \n",
+    "print(answer[:-1])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### ITP 1_6-D - Matrix Vector Multiplication"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "input_text = sys.stdin\n",
+    "a,b,c = [],[],[]\n",
+    "n,m = 0,0\n",
+    "\n",
+    "for i,t in enumerate(input_text):\n",
+    "    if i==0:\n",
+    "        n,m = list(map(int, t.split()))\n",
+    "    elif 1<=i and i<=n:\n",
+    "        a.append(list(map(int, t.split())))\n",
+    "    else: \n",
+    "        b.append(list(map(int, t.split()))[0])\n",
+    "\n",
+    "for i in range(n):\n",
+    "    ci = 0\n",
+    "    for j in range(m):\n",
+    "        ci += a[i][j] * b[j]\n",
+    "    c.append(ci)\n",
+    "    \n",
+    "for v in c:\n",
+    "    print(v)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### ITP 1_7-A - Grading"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "input_text = sys.stdin\n",
+    "for i,t in enumerate(input_text):\n",
+    "    m,f,r = list(map(int, t.split()))\n",
+    "    \n",
+    "    if (m,f,r)==(-1,-1,-1):\n",
+    "        break\n",
+    "    elif m==-1 or f==-1:\n",
+    "        g=\"F\"\n",
+    "    elif m+f>=80:\n",
+    "        g=\"A\"\n",
+    "    elif 65<=m+f<80:\n",
+    "        g=\"B\"\n",
+    "    elif 50<=m+f<65:\n",
+    "        g=\"C\"\n",
+    "    elif 30<=m+f<50 and r>=50:\n",
+    "        g=\"C\"\n",
+    "    elif 30<=m+f<50 and r<50:\n",
+    "        g=\"D\"\n",
+    "    else:\n",
+    "        g=\"F\"\n",
+    "        \n",
+    "    print(g)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### ITP 1_7-B - How many ways?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import sys, itertools\n",
+    "input_text = sys.stdin\n",
+    "for i,t in enumerate(input_text):\n",
+    "    n,x = list(map(int, t.split()))\n",
+    "    if n==0 and x==0:\n",
+    "        pass\n",
+    "    else:\n",
+    "        e_count = 0\n",
+    "        for c in list(itertools.combinations(range(1,n+1),3)):\n",
+    "            if sum(c)==x: e_count += 1\n",
+    "        print(e_count)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### ITP 1_7-C - Spreadsheet"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-14-0fd9bed25e4f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      9\u001b[0m         \u001b[0mtable\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mline\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 11\u001b[0;31m \u001b[0mlast_l\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtable\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     12\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mc\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlast_l\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m     \u001b[0mlc\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mIndexError\u001b[0m: list index out of range"
+     ]
+    }
+   ],
+   "source": [
+    "# AOJ 上ではAcceptedになります\n",
+    "import sys\n",
+    "input_text = sys.stdin\n",
+    "table = []\n",
+    "for i,t in enumerate(input_text):\n",
+    "    if i!=0:\n",
+    "        line = list(map(int, t.split()))\n",
+    "        line.append(sum(line))\n",
+    "        table.append(line)\n",
+    "        \n",
+    "last_l = [0]*len(table[-1])\n",
+    "for c in range(len(last_l)):\n",
+    "    lc = 0\n",
+    "    for r in range(len(table)):\n",
+    "        lc += table[r][c]\n",
+    "    last_l[c] = lc\n",
+    "table.append(last_l)\n",
+    "\n",
+    "a = []\n",
+    "for r in range(len(table)):\n",
+    "    l = \"\"\n",
+    "    for v in table[r]:\n",
+    "        l += str(v) + \" \"\n",
+    "    a.append(l[:-1])\n",
+    "for v in a:\n",
+    "    print(v)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### ITP 1_7-D - Matrix Multiplication"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "input_text = sys.stdin\n",
+    "a,b,c = [],[],[]\n",
+    "n,m,l = 0,0,0\n",
+    "\n",
+    "for i,t in enumerate(input_text):\n",
+    "    if i==0:\n",
+    "        n,m,l = list(map(int, t.split()))\n",
+    "    elif 1<=i and i<=n:\n",
+    "        a.append(list(map(int, t.split())))\n",
+    "    elif n+1<=i and i<=n+m:\n",
+    "        b.append(list(map(int, t.split())))\n",
+    "        \n",
+    "for s in range(n):\n",
+    "    cs = []\n",
+    "    for t in range(l):\n",
+    "        cst = 0\n",
+    "        for u in range(m):\n",
+    "            cst += a[s][u] * b[u][t]\n",
+    "        cs.append(cst)\n",
+    "    c.append(cs)\n",
+    "    \n",
+    "answer = []\n",
+    "for row in range(len(c)):\n",
+    "    line = \"\"\n",
+    "    for v in c[row]:\n",
+    "        line += str(v) + \" \"\n",
+    "    answer.append(line[:-1])\n",
+    "for v in answer:\n",
+    "    print(v)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### ITP 1_8-A - Toggling Cases"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "fAIR, LATER, OCCASIONALLY CLOUDY.\n",
+      "Fair, later, occasionally cloudy.\n"
+     ]
+    }
+   ],
+   "source": [
+    "converted = [x.upper() if x.islower() else x.lower() for x in input()]\n",
+    "print(\"\".join(converted))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "fAIR, LATER, OCCASIONALLY CLOUDY.\n",
+      "Fair, later, occasionally cloudy.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 別解\n",
+    "print(input().swapcase())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "####"
+   ]
   }
  ],
  "metadata": {
