--- a/AizuOnlineJudge_1.ipynb
+++ b/AizuOnlineJudge_1.ipynb
@@ -1225,7 +1225,338 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "####"
+    "#### ITP 1_8-B - Sum of Numbers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "123\n",
+      "6\n",
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "while True:\n",
+    "    s = [int(x) for x in input()]\n",
+    "    if s[0]!=0:\n",
+    "        print(sum(s))\n",
+    "    else:\n",
+    "        break"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### ITP 1_8-C - Counting Characters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a : 0\n",
+      "b : 0\n",
+      "c : 0\n",
+      "d : 0\n",
+      "e : 0\n",
+      "f : 0\n",
+      "g : 0\n",
+      "h : 0\n",
+      "i : 0\n",
+      "j : 0\n",
+      "k : 0\n",
+      "l : 0\n",
+      "m : 0\n",
+      "n : 0\n",
+      "o : 0\n",
+      "p : 0\n",
+      "q : 0\n",
+      "r : 0\n",
+      "s : 0\n",
+      "t : 0\n",
+      "u : 0\n",
+      "v : 0\n",
+      "w : 0\n",
+      "x : 0\n",
+      "y : 0\n",
+      "z : 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "input_text = sys.stdin\n",
+    "texts = \"\"\n",
+    "for s in input_text:\n",
+    "    texts += s.lower()\n",
+    "\n",
+    "alphabet_table = [chr(i) for i in range(97, 123)]\n",
+    "alphabet_count = {}\n",
+    "\n",
+    "for l in texts:\n",
+    "    alphabet_count[l] = alphabet_count.get(l,0) + 1\n",
+    "\n",
+    "for l in alphabet_table:\n",
+    "    print(\"{} : {}\".format(l,alphabet_count.get(l,0)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a : 0\n",
+      "b : 0\n",
+      "c : 0\n",
+      "d : 0\n",
+      "e : 0\n",
+      "f : 0\n",
+      "g : 0\n",
+      "h : 0\n",
+      "i : 0\n",
+      "j : 0\n",
+      "k : 0\n",
+      "l : 0\n",
+      "m : 0\n",
+      "n : 0\n",
+      "o : 0\n",
+      "p : 0\n",
+      "q : 0\n",
+      "r : 0\n",
+      "s : 0\n",
+      "t : 0\n",
+      "u : 0\n",
+      "v : 0\n",
+      "w : 0\n",
+      "x : 0\n",
+      "y : 0\n",
+      "z : 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 記述を短縮\n",
+    "import sys\n",
+    "alphabet_count = {}\n",
+    "for l in sys.stdin:\n",
+    "    for c in list(l.lower()):\n",
+    "        alphabet_count[c] = alphabet_count.get(c,0) + 1\n",
+    "        \n",
+    "for x in range(ord('a'),ord('z')+1):\n",
+    "    print(\"{} : {}\".format(chr(x), alphabet_count.get(chr(x),0)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### ITP 1_8-D - Ring"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "text = input()\n",
+    "pattern = input()\n",
+    "        \n",
+    "if pattern in text*2:\n",
+    "    print(\"Yes\")\n",
+    "else:\n",
+    "    print(\"No\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### ITP 1_9-A - Finding a Word"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "computer\n",
+      "Nurtures computer scientists and highly-skilled computer engineers\n",
+      "who will create and exploit \"knowledge\" for the new era.\n",
+      "Provides an outstanding computer environment.\n",
+      "END_OF_TEXT\n",
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "word = input().lower()\n",
+    "texts = []\n",
+    "while True:\n",
+    "    text = input()\n",
+    "    if text == \"END_OF_TEXT\":\n",
+    "        break\n",
+    "    else:\n",
+    "        texts.append(text.lower())\n",
+    "        \n",
+    "word_count=0\n",
+    "for s in texts:\n",
+    "    for w in s.split():\n",
+    "        word_count += 1 if w==word else 0\n",
+    "print(word_count)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### ITP 1_9-B - Shuffle"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "aabc\n",
+      "3\n",
+      "1\n",
+      "2\n",
+      "1\n",
+      "vwxyz\n",
+      "aabc\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "-\n",
+      "xyzvw\n"
+     ]
+    }
+   ],
+   "source": [
+    "def shuffle(t,h):\n",
+    "    return t[h:]+t[:h]\n",
+    "\n",
+    "t = \"\"\n",
+    "mode = 0\n",
+    "\n",
+    "while True:\n",
+    "    s = input()\n",
+    "    if s==\"-\":\n",
+    "        print(t)\n",
+    "        break\n",
+    "    elif mode==0:\n",
+    "        t = s\n",
+    "        mode=1\n",
+    "    elif mode==1:\n",
+    "        mode=2\n",
+    "    elif mode==2 and s.isdigit():\n",
+    "        h = int(s)\n",
+    "        t = shuffle(t,h)\n",
+    "    else:\n",
+    "        print(t)\n",
+    "        t,mode = s,1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### ITP 1_9-C - Card Game"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 130,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      "a x\n",
+      "a x\n",
+      "x a\n",
+      "a a\n",
+      "4 7\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "t,h,dt,dh = 0,0,0,0\n",
+    "input_count, max_input = 0,0\n",
+    "while True:\n",
+    "    l = input()\n",
+    "    if l.isdigit()==False:\n",
+    "        w1,w2 = l.split()\n",
+    "        for l1,l2 in zip(w1,w2):\n",
+    "            if ord(l1)>ord(l2) and dt==0 and dh==0:\n",
+    "                dt=3\n",
+    "            elif ord(l1)<ord(l2) and dt==0 and dh==0:\n",
+    "                dh=3\n",
+    "            else:\n",
+    "                pass\n",
+    "        if dt==0 and dh==0:\n",
+    "            if len(w1)>len(w2):\n",
+    "                dt = 3\n",
+    "            elif len(w1)<len(w2):\n",
+    "                dh=3\n",
+    "            else:\n",
+    "                dt,dh = 1,1\n",
+    "        t,h = t+dt, h+dh\n",
+    "        dt,dh = 0,0\n",
+    "        input_count += 1\n",
+    "    else:\n",
+    "        max_input = int(l)\n",
+    "    if input_count == max_input:\n",
+    "        break\n",
+    "print(\"{} {}\".format(t,h))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "WIP"
    ]
   }
  ],
