--- a/AizuOnlineJudge_1.ipynb
+++ b/AizuOnlineJudge_1.ipynb
@@ -589,7 +589,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import math\n",
@@ -1557,6 +1559,58 @@
    "source": [
     "---\n",
     "WIP"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### ITP 1_9-D - Transformation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "str_l=input()\n",
+    "command_num = input()\n",
+    "\n",
+    "while True:\n",
+    "    command = input().split()\n",
+    "    if command[0] == \"replace\":\n",
+    "        print\n",
+    "        \n",
+    "    elif command[0] == \"reverse\":\n",
+    "        str_l\n",
+    "    elif command[0] == \"print\":\n",
+    "        \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'bc'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = \"abcde\"\n",
+    "b = a\n",
+    "b[1:3]"
    ]
   }
  ],
