Add explanation about Logistic regression

--- a/Syoukai_DeepLearning_1.ipynb
+++ b/Syoukai_DeepLearning_1.ipynb
@@ -1718,6 +1718,147 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "単純パーセプトロンに確率的な出力を導入し、出力が行われることを「発火」と表現する  \n",
+    "　（注：表記は文献に従っている。生物のニューロンの発火とは無関係である）  \n",
+    "  \n",
+    "ある入力 $X$ に対して発火するとき１を、しないとき０をとる確率変数 $C$ を考える。  \n",
+    "このとき  \n",
+    "  \n",
+    "\\begin{align*}\n",
+    "p(C=1|X) & = \\sigma (W^{\\mathrm{T}}X + b) \\\\\n",
+    "p(C=0|X) & = 1 - p(C=1|X)\n",
+    "\\end{align*}\n",
+    "  \n",
+    "となるので、 $y := \\sigma (W^{\\mathrm{T}}X + b)$ とすると、上の２式は  \n",
+    "  \n",
+    "\\begin{align*}\n",
+    "p(C=t|X) &= y^{t}(1-y)^{1-t} \\\\ \n",
+    "&\\text{where} \\, t \\in \\{0,1\\}\n",
+    "\\end{align*}\n",
+    "  \n",
+    "と表すことができる。  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "さて、N個の入力データ $X_{n} \\, (n=1,2,\\dots,N)$ とそれぞれ対応する正解出力 $t_{n}$ が与えられたとき、  \n",
+    "重み $W$ およびバイアス $b$ を最尤推定するための尤度関数は次のように表すことができる。  \n",
+    "\n",
+    "\\begin{align*}\n",
+    "L(W,b) &= \\prod^{N}_{n=1}p(C=t_{n}|X_{n}) \\\\\n",
+    "&= \\prod^{N}_{n=1}y^{t_{n}}_{n}(1-y_{n})^{1-t_{n}}\n",
+    "\\end{align*}\n",
+    "\n",
+    "学習を最適化問題として捉え、最尤推定（$L(W,b)$ の最大化）によってパラメータ $W,b$ を調整することを考える。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "上の式の対数をとり、一般的な表記に合わせるため符号を入れ替えて、\n",
+    "交差エントロピー誤差関数\n",
+    " \n",
+    " \\begin{align*}\n",
+    " E(W,b) :=& -\\log L(W,b) \\\\\n",
+    " =& -\\sum^{N}_{n=1} \\{ t_{n}\\log y_{n} + (1-t_{n}) \\log (1-y_{n}) \\}\n",
+    " \\end{align*}\n",
+    " \n",
+    "を与える。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "#### 勾配降下法 (gradient descent)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\\begin{align*}\n",
+    "W^{(k+1)} &= W^{(k)} - \\eta \\frac{\\partial E(W,b)}{\\partial W} \\\\\n",
+    "b^{(k+1)} &= b^{(k)} - \\eta \\frac{\\partial E(W,b)}{\\partial b}\n",
+    "\\end{align*}\n",
+    "ここで $\\eta$ は学習率である。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "交差エントロピー誤差関数を  \n",
+    "  \n",
+    "\\begin{align*} E(W,b) := -\\sum^{N}_{n=1}E_{n} \\end{align*}  \n",
+    "すなわち  \n",
+    "\\begin{align*} E_{n} := -\\{ t_{n}\\log y_{n} + (1-t_{n} \\log (1-y_{n}) \\} \\end{align*}  \n",
+    "と表すと、重み $W$ の勾配は\n",
+    "\n",
+    "\\begin{align*}\n",
+    "\\frac{\\partial E(W,b)}{\\partial W} &= \\sum^{N}_{n=1} \\frac{\\partial E_{n}}{\\partial y_{n}} \\frac{\\partial y_{n}}{\\partial W} \\\\\n",
+    "&= -\\sum^{N}_{n=1} \\left( \\frac{t_{n}}{y_{n}} - \\frac{1-t_{n}}{1-y_{n}} \\right) \\frac{\\partial y_{n}}{\\partial W} \\\\\n",
+    "&= -\\sum^{N}_{n=1} \\left( \\frac{t_{n}}{y_{n}} - \\frac{1-t_{n}}{1-y_{n}} \\right) y_{n}(1-y_{n})X_{n} \\\\\n",
+    "&= -\\sum^{N}_{n=1} \\left( t_{n}(1-y_{n}) - y_{n}(1-t_{n}) \\right) X_{n} \\\\\n",
+    "&= -\\sum^{N}_{n=1} \\left( t_{n} - y_{n} \\right) X_{n}\n",
+    "\\end{align*}\n",
+    "\n",
+    "となる。バイアス $b$ についても同様に計算して\n",
+    "\n",
+    "\\begin{align*}\n",
+    "\\frac{\\partial E(W,b)}{\\partial b} =　-\\sum^{N}_{n=1} \\left( t_{n} - y_{n} \\right)\n",
+    "\\end{align*}\n",
+    "\n",
+    "となるから、パラメータの更新式は\n",
+    "\n",
+    "\\begin{align*}\n",
+    "W^{(k+1)} &= W^{(k)} - \\eta \\sum^{N}_{n=1} \\left( t_{n} - y_{n} \\right) X_{n} \\\\\n",
+    "b^{(k+1)} &= b^{(k)} - \\eta \\sum^{N}_{n=1} \\left( t_{n} - y_{n} \\right)\n",
+    "\\end{align*}\n",
+    "\n",
+    "と書くことができる。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "上記の更新式はN個のデータについて総和をとる必要があり、巨大なデータセットに対しては現実的でない。  \n",
+    "そこで勾配降下法のオンライン版である確率的勾配降下法 (Stochastic gradient descent) を用いる。  \n",
+    "これはパラメータの更新に際しランダムにデータを選択して更新式を適用するもので、  \n",
+    "\n",
+    "\\begin{align*}\n",
+    "W^{(k+1)} &= W^{(k)} - \\eta \\left( t_{n} - y_{n} \\right) X_{n} \\\\\n",
+    "b^{(k+1)} &= b^{(k)} - \\eta \\left( t_{n} - y_{n} \\right)\n",
+    "\\end{align*}\n",
+    "\n",
+    "と表される。\n",
+    "\n",
+    "データ全体を用いるバッチ学習とランダムに１つを選んでの更新を繰り返すオンライン学習との中間として  \n",
+    "ミニバッチ学習があり、よく用いられる。  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "----\n",
+    "#### TensorFlowによる実装\n",
+    "（基本的に書籍の通り）"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": []
   }
  ],
