Add tf code for logistic regression

--- a/Syoukai_DeepLearning_1.ipynb
+++ b/Syoukai_DeepLearning_1.ipynb
@@ -1752,7 +1752,7 @@
     "&= \\prod^{N}_{n=1}y^{t_{n}}_{n}(1-y_{n})^{1-t_{n}}\n",
     "\\end{align*}\n",
     "\n",
-    "学習を最適化問題として捉え、最尤推定（$L(W,b)$ の最大化）によってパラメータ $W,b$ を調整することを考える。"
+    "学習を最適化問題として捉え、最尤推定（ $L(W,b)$ の最大化）によってパラメータ $W,b$ を調整することを考える。"
    ]
   },
   {
@@ -1849,7 +1849,100 @@
    "source": [
     "----\n",
     "#### TensorFlowによる実装\n",
-    "（基本的に書籍の通り）"
+    "（tensorflowのバージョンアップに伴い、githubに掲載されているコードを参照した。  \n",
+    "　参照：[deeplearning-tensorflow-keras/3/tensorflow/01_logistic_regression_or_tensorflow.py](https://github.com/yusugomori/deeplearning-tensorflow-keras/blob/master/3/tensorflow/01_logistic_regression_or_tensorflow.py)）"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import tensorflow as tf\n",
+    "\n",
+    "# 変数、パラメータ、誤差関数の定義\n",
+    "w = tf.Variable(tf.zeros([2,1]))\n",
+    "b = tf.Variable(tf.zeros([1]))\n",
+    "\n",
+    "x = tf.placeholder(tf.float32, shape=[None, 2])\n",
+    "t = tf.placeholder(tf.float32, shape=[None, 1])\n",
+    "y = tf.nn.sigmoid(tf.matmul(x,w)+b)\n",
+    "\n",
+    "cross_entropy = -tf.reduce_sum(t * tf.log(y) + (1-t) * tf.log(1-y))\n",
+    "\n",
+    "# 学習と結果確認方法の定義\n",
+    "train_step = tf.train.GradientDescentOptimizer(0.1).minimize(cross_entropy)\n",
+    "correct_prediction = tf.equal(tf.to_float(tf.greater(y, 0.5)), t)\n",
+    "\n",
+    "# データの準備\n",
+    "X = np.array([[0,0], [0,1], [1,0], [1,1]])\n",
+    "Y = np.array([[0], [1], [1], [1]])\n",
+    "\n",
+    "# セッションの作成と初期化\n",
+    "init = tf.global_variables_initializer()\n",
+    "sess = tf.Session()\n",
+    "sess.run(init)\n",
+    "\n",
+    "# 学習の実行\n",
+    "for epoch in range(200):\n",
+    "    sess.run(train_step, feed_dict = {\n",
+    "        x: X,\n",
+    "        t: Y\n",
+    "    })"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "classified:\n",
+      " [[ True]\n",
+      " [ True]\n",
+      " [ True]\n",
+      " [ True]]\n",
+      "output probability:\n",
+      " [[ 0.22355038]\n",
+      " [ 0.91425949]\n",
+      " [ 0.91425949]\n",
+      " [ 0.99747425]]\n",
+      "parameter:\n",
+      " W=[[ 3.61188436]\n",
+      " [ 3.61188436]], \n",
+      " b=[-1.24509501]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 学習結果の確認\n",
+    "classified = correct_prediction.eval(session=sess, feed_dict={\n",
+    "    x: X,\n",
+    "    t: Y\n",
+    "})\n",
+    "print(\"classified:\\n\", classified)\n",
+    "\n",
+    "prob = y.eval(session=sess, feed_dict={\n",
+    "    x: X,\n",
+    "    t: Y\n",
+    "})\n",
+    "print(\"output probability:\\n\", prob)\n",
+    "\n",
+    "print(\"parameter:\\n W={}, \\n b={}\".format(sess.run(w), sess.run(b)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Kerasによる実装"
    ]
   },
   {
