Add pytorch code for logistic reg.

--- a/Syoukai_DeepLearning_1.ipynb
+++ b/Syoukai_DeepLearning_1.ipynb
@@ -1869,7 +1869,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -2190,13 +2192,7 @@
       "4/4 [==============================] - 0s - loss: 0.1923     \n",
       "Epoch 108/200\n",
       "4/4 [==============================] - 0s - loss: 0.1910     \n",
-      "Epoch 109/200\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 109/200\n",
       "4/4 [==============================] - 0s - loss: 0.1897     \n",
       "Epoch 110/200\n",
       "4/4 [==============================] - 0s - loss: 0.1884     \n",
@@ -2419,6 +2415,301 @@
     "\n",
     "print(\"\\n\\nclassified:\\n\", Y==classes)\n",
     "print(\"\\noutput probability:\\n\", prob)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### PyTorchによる実装"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "参考：  \n",
+    "[PyTorch Tutorials](http://pytorch.org/tutorials/)  \n",
+    "[epochventures/PyTorch]()   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "epoch:1/200, loss:3.833631217479706\n",
+      "epoch:2/200, loss:3.621105968952179\n",
+      "epoch:3/200, loss:3.2993175387382507\n",
+      "epoch:4/200, loss:2.950357973575592\n",
+      "epoch:5/200, loss:2.6273014545440674\n",
+      "epoch:6/200, loss:2.356114536523819\n",
+      "epoch:7/200, loss:2.1426139771938324\n",
+      "epoch:8/200, loss:1.9810305833816528\n",
+      "epoch:9/200, loss:1.8610761761665344\n",
+      "epoch:10/200, loss:1.7722336947917938\n",
+      "epoch:11/200, loss:1.7056519836187363\n",
+      "epoch:12/200, loss:1.6545888632535934\n",
+      "epoch:13/200, loss:1.6141964197158813\n",
+      "epoch:14/200, loss:1.5811055600643158\n",
+      "epoch:15/200, loss:1.5530239269137383\n",
+      "epoch:16/200, loss:1.528408795595169\n",
+      "epoch:17/200, loss:1.5062270611524582\n",
+      "epoch:18/200, loss:1.4857889786362648\n",
+      "epoch:19/200, loss:1.4666314348578453\n",
+      "epoch:20/200, loss:1.4484435766935349\n",
+      "epoch:21/200, loss:1.4310133755207062\n",
+      "epoch:22/200, loss:1.4141965880990028\n",
+      "epoch:23/200, loss:1.3978931531310081\n",
+      "epoch:24/200, loss:1.382032498717308\n",
+      "epoch:25/200, loss:1.3665642514824867\n",
+      "epoch:26/200, loss:1.3514516726136208\n",
+      "epoch:27/200, loss:1.3366676270961761\n",
+      "epoch:28/200, loss:1.3221907876431942\n",
+      "epoch:29/200, loss:1.3080048374831676\n",
+      "epoch:30/200, loss:1.2940966561436653\n",
+      "epoch:31/200, loss:1.2804548367857933\n",
+      "epoch:32/200, loss:1.2670703195035458\n",
+      "epoch:33/200, loss:1.2539346441626549\n",
+      "epoch:34/200, loss:1.2410401701927185\n",
+      "epoch:35/200, loss:1.2283807694911957\n",
+      "epoch:36/200, loss:1.2159495986998081\n",
+      "epoch:37/200, loss:1.203741479665041\n",
+      "epoch:38/200, loss:1.191750392317772\n",
+      "epoch:39/200, loss:1.1799711249768734\n",
+      "epoch:40/200, loss:1.1683988869190216\n",
+      "epoch:41/200, loss:1.1570286490023136\n",
+      "epoch:42/200, loss:1.1458559855818748\n",
+      "epoch:43/200, loss:1.1348760202527046\n",
+      "epoch:44/200, loss:1.1240845657885075\n",
+      "epoch:45/200, loss:1.1134773530066013\n",
+      "epoch:46/200, loss:1.103050071746111\n",
+      "epoch:47/200, loss:1.0927984602749348\n",
+      "epoch:48/200, loss:1.0827190019190311\n",
+      "epoch:49/200, loss:1.0728077106177807\n",
+      "epoch:50/200, loss:1.0630606152117252\n",
+      "epoch:51/200, loss:1.0534740649163723\n",
+      "epoch:52/200, loss:1.0440445952117443\n",
+      "epoch:53/200, loss:1.034768633544445\n",
+      "epoch:54/200, loss:1.0256427805870771\n",
+      "epoch:55/200, loss:1.016663782298565\n",
+      "epoch:56/200, loss:1.0078284740447998\n",
+      "epoch:57/200, loss:0.9991332124918699\n",
+      "epoch:58/200, loss:0.9905756637454033\n",
+      "epoch:59/200, loss:0.9821518957614899\n",
+      "epoch:60/200, loss:0.9738597087562084\n",
+      "epoch:61/200, loss:0.9656960181891918\n",
+      "epoch:62/200, loss:0.9576579760760069\n",
+      "epoch:63/200, loss:0.9497428871691227\n",
+      "epoch:64/200, loss:0.9419480729848146\n",
+      "epoch:65/200, loss:0.934271115809679\n",
+      "epoch:66/200, loss:0.9267092365771532\n",
+      "epoch:67/200, loss:0.9192604050040245\n",
+      "epoch:68/200, loss:0.9119218941777945\n",
+      "epoch:69/200, loss:0.9046913497149944\n",
+      "epoch:70/200, loss:0.8975664917379618\n",
+      "epoch:71/200, loss:0.8905454520136118\n",
+      "epoch:72/200, loss:0.8836259841918945\n",
+      "epoch:73/200, loss:0.8768055867403746\n",
+      "epoch:74/200, loss:0.8700827397406101\n",
+      "epoch:75/200, loss:0.863454882055521\n",
+      "epoch:76/200, loss:0.8569207787513733\n",
+      "epoch:77/200, loss:0.850478008389473\n",
+      "epoch:78/200, loss:0.8441248722374439\n",
+      "epoch:79/200, loss:0.8378596100956202\n",
+      "epoch:80/200, loss:0.8316804021596909\n",
+      "epoch:81/200, loss:0.8255856391042471\n",
+      "epoch:82/200, loss:0.8195736836642027\n",
+      "epoch:83/200, loss:0.813642792403698\n",
+      "epoch:84/200, loss:0.8077914658933878\n",
+      "epoch:85/200, loss:0.8020181404426694\n",
+      "epoch:86/200, loss:0.7963214367628098\n",
+      "epoch:87/200, loss:0.7906995797529817\n",
+      "epoch:88/200, loss:0.7851515673100948\n",
+      "epoch:89/200, loss:0.779675523750484\n",
+      "epoch:90/200, loss:0.7742703817784786\n",
+      "epoch:91/200, loss:0.7689347947016358\n",
+      "epoch:92/200, loss:0.7636673050001264\n",
+      "epoch:93/200, loss:0.7584666851907969\n",
+      "epoch:94/200, loss:0.7533320635557175\n",
+      "epoch:95/200, loss:0.7482617348432541\n",
+      "epoch:96/200, loss:0.7432550368830562\n",
+      "epoch:97/200, loss:0.7383103528991342\n",
+      "epoch:98/200, loss:0.7334267972037196\n",
+      "epoch:99/200, loss:0.7286031441763043\n",
+      "epoch:100/200, loss:0.7238384773954749\n",
+      "epoch:101/200, loss:0.7191316457465291\n",
+      "epoch:102/200, loss:0.714481795206666\n",
+      "epoch:103/200, loss:0.7098876070231199\n",
+      "epoch:104/200, loss:0.7053484544157982\n",
+      "epoch:105/200, loss:0.7008630204945803\n",
+      "epoch:106/200, loss:0.6964306309819221\n",
+      "epoch:107/200, loss:0.6920504616573453\n",
+      "epoch:108/200, loss:0.6877213176339865\n",
+      "epoch:109/200, loss:0.6834426438435912\n",
+      "epoch:110/200, loss:0.6792131848633289\n",
+      "epoch:111/200, loss:0.6750325812026858\n",
+      "epoch:112/200, loss:0.6709000235423446\n",
+      "epoch:113/200, loss:0.6668141400441527\n",
+      "epoch:114/200, loss:0.6627745227888227\n",
+      "epoch:115/200, loss:0.6587807256728411\n",
+      "epoch:116/200, loss:0.6548316413536668\n",
+      "epoch:117/200, loss:0.6509263729676604\n",
+      "epoch:118/200, loss:0.6470645256340504\n",
+      "epoch:119/200, loss:0.6432451633736491\n",
+      "epoch:120/200, loss:0.6394679052755237\n",
+      "epoch:121/200, loss:0.6357316924259067\n",
+      "epoch:122/200, loss:0.6320362989790738\n",
+      "epoch:123/200, loss:0.6283808872103691\n",
+      "epoch:124/200, loss:0.6247648089192808\n",
+      "epoch:125/200, loss:0.6211872934363782\n",
+      "epoch:126/200, loss:0.6176480958238244\n",
+      "epoch:127/200, loss:0.6141462582163513\n",
+      "epoch:128/200, loss:0.6106815505772829\n",
+      "epoch:129/200, loss:0.6072529857046902\n",
+      "epoch:130/200, loss:0.6038603559136391\n",
+      "epoch:131/200, loss:0.600503190420568\n",
+      "epoch:132/200, loss:0.5971806226298213\n",
+      "epoch:133/200, loss:0.5938924951478839\n",
+      "epoch:134/200, loss:0.5906377108767629\n",
+      "epoch:135/200, loss:0.5874165170826018\n",
+      "epoch:136/200, loss:0.5842278385534883\n",
+      "epoch:137/200, loss:0.5810715253464878\n",
+      "epoch:138/200, loss:0.5779468608088791\n",
+      "epoch:139/200, loss:0.5748537112958729\n",
+      "epoch:140/200, loss:0.5717912474647164\n",
+      "epoch:141/200, loss:0.5687592988833785\n",
+      "epoch:142/200, loss:0.5657572513446212\n",
+      "epoch:143/200, loss:0.5627846964634955\n",
+      "epoch:144/200, loss:0.5598412682302296\n",
+      "epoch:145/200, loss:0.5569266229867935\n",
+      "epoch:146/200, loss:0.5540402308106422\n",
+      "epoch:147/200, loss:0.5511818453669548\n",
+      "epoch:148/200, loss:0.5483507961034775\n",
+      "epoch:149/200, loss:0.5455470141023397\n",
+      "epoch:150/200, loss:0.5427698441781104\n",
+      "epoch:151/200, loss:0.540019144769758\n",
+      "epoch:152/200, loss:0.5372945121489465\n",
+      "epoch:153/200, loss:0.534595453646034\n",
+      "epoch:154/200, loss:0.531921642832458\n",
+      "epoch:155/200, loss:0.5292729204520583\n",
+      "epoch:156/200, loss:0.5266487072221935\n",
+      "epoch:157/200, loss:0.5240488001145422\n",
+      "epoch:158/200, loss:0.521473117172718\n",
+      "epoch:159/200, loss:0.518920801114291\n",
+      "epoch:160/200, loss:0.5163918971084058\n",
+      "epoch:161/200, loss:0.5138859716244042\n",
+      "epoch:162/200, loss:0.5114028607495129\n",
+      "epoch:163/200, loss:0.5089421393349767\n",
+      "epoch:164/200, loss:0.5065035466104746\n",
+      "epoch:165/200, loss:0.5040868218056858\n",
+      "epoch:166/200, loss:0.5016914275474846\n",
+      "epoch:167/200, loss:0.4993174832779914\n",
+      "epoch:168/200, loss:0.49696477269753814\n",
+      "epoch:169/200, loss:0.49463265435770154\n",
+      "epoch:170/200, loss:0.49232077808119357\n",
+      "epoch:171/200, loss:0.4900294344406575\n",
+      "epoch:172/200, loss:0.48775772121734917\n",
+      "epoch:173/200, loss:0.48550588451325893\n",
+      "epoch:174/200, loss:0.48327351408079267\n",
+      "epoch:175/200, loss:0.4810603568330407\n",
+      "epoch:176/200, loss:0.4788661887869239\n",
+      "epoch:177/200, loss:0.47669073357246816\n",
+      "epoch:178/200, loss:0.4745337013155222\n",
+      "epoch:179/200, loss:0.4723951437044889\n",
+      "epoch:180/200, loss:0.4702744788955897\n",
+      "epoch:181/200, loss:0.4681715362239629\n",
+      "epoch:182/200, loss:0.4660865687765181\n",
+      "epoch:183/200, loss:0.46401868877001107\n",
+      "epoch:184/200, loss:0.4619680908508599\n",
+      "epoch:185/200, loss:0.459934409474954\n",
+      "epoch:186/200, loss:0.45791759225539863\n",
+      "epoch:187/200, loss:0.45591737143695354\n",
+      "epoch:188/200, loss:0.453933514887467\n",
+      "epoch:189/200, loss:0.45196580002084374\n",
+      "epoch:190/200, loss:0.45001406921073794\n",
+      "epoch:191/200, loss:0.44807821908034384\n",
+      "epoch:192/200, loss:0.4461578391492367\n",
+      "epoch:193/200, loss:0.4442530337255448\n",
+      "epoch:194/200, loss:0.4423634826671332\n",
+      "epoch:195/200, loss:0.4404891631565988\n",
+      "epoch:196/200, loss:0.43862934480421245\n",
+      "epoch:197/200, loss:0.4367846017703414\n",
+      "epoch:198/200, loss:0.43495446420274675\n",
+      "epoch:199/200, loss:0.43313854467123747\n",
+      "epoch:200/200, loss:0.43133699195459485\n",
+      "Finished Training\n",
+      "Variable containing:\n",
+      " 0.2211\n",
+      " 0.9156\n",
+      " 0.9149\n",
+      " 0.9976\n",
+      "[torch.FloatTensor of size 4x1]\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import torch\n",
+    "from torch import nn\n",
+    "from torch.autograd import Variable\n",
+    "import torch.nn.functional as F\n",
+    "from torch import optim\n",
+    "import torch.utils.data\n",
+    "\n",
+    "class Net(nn.Module):\n",
+    "    def __init__(self):\n",
+    "        super(Net, self).__init__()\n",
+    "        self.fc1 = nn.Linear(2,1)\n",
+    "        \n",
+    "    def forward(self, x):\n",
+    "        x = F.sigmoid(self.fc1(x))\n",
+    "        return x\n",
+    "\n",
+    "X = [[0,0], [0,1], [1,0], [1,1]]\n",
+    "Y = [[0], [1], [1], [1]]\n",
+    "\n",
+    "# input_dataはfloat型、targetはlong型とする\n",
+    "# 多クラス分類の場合はone-hotではなくクラス番号を格納する\n",
+    "#train = torch.utils.data.TensorDataset(torch.from_numpy(X), torch.from_numpy(Y))\n",
+    "#train_loader = torch.utils.data.DataLoader(train, batch_size=1)\n",
+    "#test = torch.utils.data.TensorDataset(torch.from_numpy(X), torch.from_numpy(Y))\n",
+    "#test_loader = torch.utils.data.DataLoader(train, batch_size=1)\n",
+    "\n",
+    "net = Net()\n",
+    "criterion = nn.BCELoss() # binary_crossentropy\n",
+    "optimizer = optim.SGD(net.parameters(), lr=0.01, momentum=0.9)\n",
+    "\n",
+    "for epoch in range(200):\n",
+    "\n",
+    "    running_loss = 0.0 \n",
+    "\n",
+    "    for i, data in enumerate(zip(X,Y)):\n",
+    "        inputs, labels = data\n",
+    "        inputs, labels = Variable(torch.FloatTensor(inputs)), Variable(torch.FloatTensor(labels))\n",
+    "        \n",
+    "        # GPUを使用する場合\n",
+    "        # net.cuda()\n",
+    "        # inputs, labels = Variable(inputs.cuda()), Variable(labels.cuda())\n",
+    "        \n",
+    "        optimizer.zero_grad()\n",
+    "        outputs = net(inputs)\n",
+    "\n",
+    "        loss = criterion(outputs, labels)\n",
+    "        loss.backward()\n",
+    "        optimizer.step()\n",
+    "        \n",
+    "        running_loss += loss.data[0]\n",
+    "\n",
+    "    print('epoch:{}/200, loss:{}'.format(epoch + 1, running_loss))\n",
+    "\n",
+    "print('Finished Training')\n",
+    "print(net(Variable(torch.FloatTensor(X))))"
    ]
   }
  ],
