Fix some bugs in tex code

--- a/Syoukai_DeepLearning_1.ipynb
+++ b/Syoukai_DeepLearning_1.ipynb
@@ -3063,8 +3063,12 @@
     "\n",
     "\\begin{align*}\n",
     "W = (W_{1} + W_{2} + \\dots + W_{k} + \\dots + W_{K})^{\\mathrm{T}}\n",
-    "\\end{align*} より \\begin{align*}\n",
-    "E := \\,& E(W,b)\\\\\n",
+    "\\end{align*}\n",
+    "\n",
+    "より\n",
+    "\n",
+    "\\begin{align*}\n",
+    "E := \\,& E(W,b) \\\\\n",
     "= \\,& E(W_{1} + W_{2} + \\dots + W_{k} + \\dots + W_{K}, b)\n",
     "\\end{align*}\n",
     "\n",
